--- a/scss/_bhromaon-section.scss
+++ b/scss/_bhromaon-section.scss
@@ -9,32 +9,50 @@
 	}
 	&__title {
 		color: #ffffff;
+		font-family: 'Josefin Sans', sans-serif;
+		text-transform: uppercase;
+		margin-bottom: 9px;
+		font-size: 48px;
 		padding-top: 271px;
 		letter-spacing: 1px;
+		text-align: center;
 	}
 	&__subtitle {
 		color: #ffffff;
-		letter-spacing: 1px;
+		font-family: 'josefin_sansregular';
+		letter-spacing: 5px;
+		margin-top: 9px;
+		font-size: 22px;
+		text-align: center;
 	}
 	&__form {
 		width: 654px;
 		margin: 0 auto;
 	}
-	&__text-input {
-		width: 654px;
+	&__search-input {
+		width: 402px;
 		height: 60px;
+		padding-right: 126px;
+		padding-left: 126px;
 		display: block;
 		position: relative;
 		background-color: #ffffff;
 		border: none;
 		outline: none;
+		&::placeholder {
+			font-size: 14px;
+			font-family: 'josefin_sansregular';
+			letter-spacing: 3px;
+		}
 	}
-	&__search-input {
+	&__button {
 		width: 143px;
-		height: 52px;
+		height: 58px;
+		font-size: 14px;
+		font-family: 'aleoregular';
 		position: absolute;
-		right: 435px;
-		bottom: 248px;
+		margin-left: 508px;
+		margin-top: -60px;
 		text-align: center;
 		border: none;
 		color: #ffffff;
