--- a/scss/_our-tourist-section.scss
+++ b/scss/_our-tourist-section.scss
@@ -15,6 +15,7 @@
 		padding-bottom: 95px;
 	}
 	&__description-title {
+		color: #ffffff;
 		text-align: center;
 	}
 	&__flex-container {
@@ -38,6 +39,9 @@
 		padding-right: 55px;
 	}
 	&__description-subtitle {
-		
+		color: #ffffff;
+	}
+	&__description-text {
+		color: #ffffff;
 	}
 }
