--- a/scss/_footer-section.scss
+++ b/scss/_footer-section.scss
@@ -15,9 +15,15 @@
 	}
 	&__description-title {
 		text-align: center;
+		color: #ffffff;
+		font-family: 'Josefin Sans', sans-serif;
+		font-size: 24px;
 	}
 	&__description-text {
 		text-align: center;
+		font-family: 'Josefin Sans', sans-serif;
+		font-size: 16px;
+		color: #ffffff;
 	}
 	&__description-second-box {
 		width: 256px;
