--- a/scss/_whatwedo-section.scss
+++ b/scss/_whatwedo-section.scss
@@ -10,8 +10,7 @@
 		width: 542px;
 		height: 369px;
 		padding: 30px;
-		background-color: #232323;
-		opacity: .8;
+		background-color: rgba(35, 35, 35, 0.9);
 	}
 	&__description-subtitle {
 		color: #ffffff;
